# FaceDetector

./: .gitignore  hello.py  main.py  pyproject.toml
_face_detector/: face_detector.py
_model/: model_init.py
_system/: data_processor.py  log_config.py
