[project]
name = "facedetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
